Did a main page with a basic information of all others pages

--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
     <div class="header"><h1>Informačné zdroje</h1>
     <h1>Nikita Kostrov</h1>
     </div>
-    <div class="cissus">
+    <div class="main">
         <a href="cissus.html">Čiselne sustavy</a>
         <ul>
             <li>Dvojkova sústava</li>
@@ -21,26 +21,38 @@
             <li>Desiatková sústava</li>
             <li>Prevody</li>
         </ul>
-    </div>
-    <div class="hisinz">
+    <hr>
+    
         <a href="hisinz.html">Historia inz</a>
-        <p>Prečo a kde vzniklo pismo</p>
-        <p>Gombíkova pečať</p>
-        <p>Obrazky, valčeky, hlina</p>
-        <p>Akymi spôsobmi komunikuje človek</p>
-        <p></p>
-        <p></p>
-    </div>
-    <div class="hoax">
-        <a href="#">lorem</a>
-        <p>lorem</p>
-        <p>lorem</p>
-    </div>
-    <div class="inz">
-        <a href="">Informačný zdroj</a>
-    </div>
-    <div class="jedninf">
-        <a href="">Jednotky informacie</a>
+        <ul>
+            <li>Prečo a kde vzniklo pismo</li>
+            <li>Gombíkova pečať</li>
+            <li>Obrazky, valčeky, hlina</li>
+            <li>Akymi spôsobmi komunikuje človek</li>
+        </ul>
+    <hr>
+        <a href="hoax.html">Hoax</a>
+        <ul>
+            <li>Aké podoby majú dezinformácie a hoaxy?</li>
+            <li>Podľa čoho identifikujeme hoax/falošnú správu</li>
+            <li>Aj iné veci</li>
+        </ul>
+    <hr>
+        <a href="inz.html">Informačný zdroj</a>
+        <ul>
+            <li>Informačný zdroj</li>
+            <li>Informácia</li>
+            <li>Výpočtová technika</li>
+        </ul>
+    <hr>
+        <a href="jedninf.html">Jednotky informacie</a> 
+        <ul>
+            <li>Jednotky informacie</li>
+            <li>1 byte = 8 bitov</li>
+            <li>Dvojková sústava</li>
+            <li>Prevod z desiatkovej sústavy do dvojkovej</li>
+            <li>Prevod z dvojkovej do desiatkovej</li>
+        </ul>
     </div>
 </body>
 </html>
