--- a/hisinz.html
+++ b/hisinz.html
@@ -24,7 +24,27 @@
         fotoreportaže <br>
             <span class="number">1926</span> - bulvární tisk v Čecnách - Expres, Polední list, Telegraf <br>
             <span class="number">1945</span> - 1. myšlenka multimediální knihovny - Memex (Vannevar Bush) <br>
-            </p>
+            <span class="number">1969</span> - vzniká předchudce internetu - Arpanet, propojeny 4 univerzity USA <br>
+            <span class="number">1972</span> - 1 případ investigativní žurnalistiky - americká aféra "Watergate" <br>
+            <span>1973</span> - síť Arpanet pronikla do Evropy <br>
+            <span>1983</span> - siť Arpanet oddělena od ministerstva obrany USA, rozšíreni <br>
+        do komerční sféry <br>
+            <span>1991</span> - představen 1. internetový prohlížeč - WorldWideWeb v CERNu <br>
+            <span>1996</span> - 1. elektronický časopis - Neviditelný pes (Ondřej Neff, zakladatel)</p>
+        <hr>
+        <p>more+plavec = moreplavec,  <br>
+        auto + škola = autoškola</p>
+        <p>Písmo je pamäť ľudstva. Môžeme sa o tom presvedčiť sami. <br>
+        Čo urobíme, keď si budeme chcieť niečo zapamätať? <br>
+        Zaviažeme si uzol na vreckovke? Po čase sa však môže to stať <br>
+        že uzol nám síce pripomenie nejakú povinnosť, ale akú, to nam <br>
+        nepovie. Myslím, že väčšina z vás si to radšej zapíše. <br>
+        Prostriedky ako zaznamenávať a predávať správy pomocou <br>
+        kresieb existujú už desiatky tisíc rokov.</p>
+        <p>K tým najstarším určite patria jaskynné maľby. <br>
+        Približne 20 tisíc rokov pred Kristov vytvorili ľudia v jaskyni <br>
+        Lescaux prvé známe kresby. <br>
+        </p>
     </div>
 </body>
 </html>
