Finish second page

--- a/hisinz.html
+++ b/hisinz.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia INZ</title>
     <link rel="stylesheet" href="styles/hisinz.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <div class="header">
@@ -26,11 +30,11 @@
             <span class="number">1945</span> - 1. myšlenka multimediální knihovny - Memex (Vannevar Bush) <br>
             <span class="number">1969</span> - vzniká předchudce internetu - Arpanet, propojeny 4 univerzity USA <br>
             <span class="number">1972</span> - 1 případ investigativní žurnalistiky - americká aféra "Watergate" <br>
-            <span>1973</span> - síť Arpanet pronikla do Evropy <br>
-            <span>1983</span> - siť Arpanet oddělena od ministerstva obrany USA, rozšíreni <br>
+            <span class="number">1973</span> - síť Arpanet pronikla do Evropy <br>
+            <span class="number">1983</span> - siť Arpanet oddělena od ministerstva obrany USA, rozšíreni <br>
         do komerční sféry <br>
-            <span>1991</span> - představen 1. internetový prohlížeč - WorldWideWeb v CERNu <br>
-            <span>1996</span> - 1. elektronický časopis - Neviditelný pes (Ondřej Neff, zakladatel)</p>
+            <span class="number">1991</span> - představen 1. internetový prohlížeč - WorldWideWeb v CERNu <br>
+            <span class="number">1996</span> - 1. elektronický časopis - Neviditelný pes (Ondřej Neff, zakladatel)</p>
         <hr>
         <p>more+plavec = moreplavec,  <br>
         auto + škola = autoškola</p>
@@ -45,6 +49,8 @@
         Približne 20 tisíc rokov pred Kristov vytvorili ľudia v jaskyni <br>
         Lescaux prvé známe kresby. <br>
         </p>
+        <p>Ďalších 17 tisícročí trvalo, kým sa začal odvíjať jeden z najúžasnejších <br>
+        príbehov ľudstva, z ktorého vzišlo písmo. Takýto náročný systém</p>
     </div>
 </body>
 </html>
