added first part of page

--- a/hoax.html
+++ b/hoax.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>HOAX</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles/hoax.css" rel="stylesheet">
@@ -9,7 +9,25 @@
   <body>
     <div class='header'>
       <h1>HOAX</h1>
-      <a href='index.css'>Vratiť naspäť</a>
+      <a href='index1.html'> Vratiť naspäť</a>
+      <hr>
+    </div>
+    <div class='main'>
+      <p>Hoax je <b>správa s klamlivým, falošným či inak vedome nesprávnym obsahom</b> <br>
+        (a teda dezinformáciou), ktorá sa snaži vyvolať negativnu emóciu a zmanipulovať prijemcu <br>
+        aby správu preposielal a ďalej masovo širil.
+     </p>
+      <p>Hoax je špecifický typ dezinformácie, obsahuje požiadovku na ďalší širitelia <br>
+        hoaxu môžu byť vďaka manipulácii presvedčeni o pravdivosti obsahu, a teda ho <br>
+          širia ako misinformáciu.
+      </p>
+      <p>Autor hoaxu sa často vydáva za dôveryhodný zdroj (firmu, štátnu inštituciu alebo <br>
+        zneuživa ich meno na podvodné citácie, ako napr, 'americki vedci zistili') a varuje <br>
+          pred katastrofickými následkami fiktivnej udalosti. Použiva pritom tvrdeniam ktoré <br>
+          nemajú oporu vo vedecky overených alebo overiteľných dátach. Cieľom tvorcu hoaxu je <br>
+          vyvolať strach, úzkosť či pocit ohrozenia a donútiť tak obeť, aby konala nepremyslene.
+      </p>
+      <h1>Aké podoby majú dezinformácie a hoaxy?</h1>
     </div>
   </body>
 </html>
