--- a/hoax.html
+++ b/hoax.html
@@ -27,7 +27,20 @@
           nemajú oporu vo vedecky overených alebo overiteľných dátach. Cieľom tvorcu hoaxu je <br>
           vyvolať strach, úzkosť či pocit ohrozenia a donútiť tak obeť, aby konala nepremyslene.
       </p>
+      <p>Dezinformácie a hoaxy môžu mať viacero podôb na ilustráciu uvádzame jedny z najrozširenejších.</p>
       <h1>Aké podoby majú dezinformácie a hoaxy?</h1>
+    <p><span class='bluetext'>Zneuživajúce súcit</span> - Tento druh hoaxov sa snaži zneuživať súcit <br>
+        prijímateľa a za ďalšie širenie, lajkovanie či popularizáciu sľubuje nereálnu finančnú odmenu, <br>
+          záchranu ohrozeného života či iné výhody. <br>
+        <span class='bluetext'>Falošné správy a dezinformácie</span> (Fake news) - <br>
+          snažia sa pomocou upravených, prekrútených či vymeslených informácií manipulovať masy <br>
+          a ich názory, najčastejčie s politickým alebo ideologickým cieľom. Ich silu zvyšujú aj <br>
+          sociálne siete, ktoré podobný obsah neregulujú a pre jeho vysoku virálnosť ho ich algoritmy <br>
+          širia ešte intenzívnejšie. <br>
+        <span class='bluetext'>Vymyslené citáty známej osobnosti</span> - autor informáciu širi ako citát známej osobnosti, ktorá má v danej krajine dôveru <br>
+          a jej názory môžu byť mienkotvorné. Takáto správa/informacia sa pre zvýšenie hodnovernosti doplni aj fotografiou osobnosti. Môže isť o známu osobu <br>
+          ktorá je staršia a nie je, alebo je menej, aktivna na sociálnych sieťach, preto je sprava ťažšie overiteľná.
+      </p>
     </div>
   </body>
 </html>
