--- a/hoax.html
+++ b/hoax.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles/hoax.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
+ 
   </head>
   <body>
     <div class='header'>
       <h1>HOAX</h1>
       <a href='index1.html'> Vratiť naspäť</a>
-      <hr>
     </div>
+    <hr>
     <div class='main'>
       <p>Hoax je <b>správa s klamlivým, falošným či inak vedome nesprávnym obsahom</b> <br>
         (a teda dezinformáciou), ktorá sa snaži vyvolať negativnu emóciu a zmanipulovať prijemcu <br>
